trying to fix the image not being visible on deployed site

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,7 +4,6 @@ html {
 
 body {
     background: no-repeat center center fixed;
-    background-image: url('https://naveenastore.s3.amazonaws.com/media/scented_candle.png');
     background-size: cover;
     height: calc(100vh - 164px);
     color: rgb(82, 0, 0);
@@ -79,7 +78,7 @@ body {
 	top: 0;
 	left: 0;
 	position: fixed;
-	background: url('/media/scented_candle_home.png') no-repeat center center fixed;
+	background: linear-gradient(to bottom, #f1c27d, #f79c42, #ffcc5c, #ffffff);
     background-size: cover;
 	z-index: -1;
 }
